@@ -18,17 +18,22 @@ public class UserController {
 
     public User loginUser(String email, String password) {
 
-        String query = String.format("Select u.id, u.email, u.name, ut.type from user u " +
-                "join user_type ut on ut.id = u.user_type_id where email='%s' and password='%s';", email, password);
+        String query = "Select u.id, u.email, u.name, ut.type, uc.phone, uc.address \n" +
+                        "from user u \n" +
+                        "join user_type ut on ut.id = u.user_type_id \n" +
+                        "join user_contact uc on u.id = uc.user_id \n"+
+                        "where email='%s' and password='%s';".formatted(email, password);
         User user = null;
         try {
-            ResultSet resultSet = connector.runSQLStatement(query);
+            ResultSet resultSet = connector.runSQLResultStatement(query);
             while (resultSet.next()) {
                 user = User.builder()
                         .id(resultSet.getInt("id"))
                         .email(resultSet.getString("email"))
                         .name(resultSet.getString("name"))
                         .type(resultSet.getString("type"))
+                        .address(resultSet.getString("address"))
+                        .phone(resultSet.getString("phone"))
                         .build();
 
             }
@@ -44,20 +49,23 @@ public class UserController {
 
 
     public List<User> getCustomers(){
-        String query = "select u.id, u.email, u.name, ut.type" +
-                        "from user u" +
-                        "join user_type ut on ut.id = u.user_type_id" +
+        String query = "select u.id, u.email, u.name, ut.type, uc.phone, uc.address \n" +
+                        "from user u \n" +
+                        "join user_contact uc on u.id = uc.user_id \n"+
+                        "join user_type ut on ut.id = u.user_type_id \n" +
                         "where ut.type = 'Customer';";
 
         List<User> customers = new ArrayList<>();
         try {
-            ResultSet resultSet = connector.runSQLStatement(query);
+            ResultSet resultSet = connector.runSQLResultStatement(query);
             while (resultSet.next()) {
                 customers.add(User.builder()
                         .id(resultSet.getInt("id"))
                         .email(resultSet.getString("email"))
                         .name(resultSet.getString("name"))
                         .type(resultSet.getString("type"))
+                        .address(resultSet.getString("address"))
+                        .phone(resultSet.getString("phone"))
                         .build());
 
             }
@@ -69,20 +77,23 @@ public class UserController {
     }
 
     public User getCustomer(Integer id){
-        String query = "select u.id, u.email, u.name, ut.type\n" +
+        String query = "select u.id, u.email, u.name, ut.type, uc.phone, uc.address\n" +
                         "from user u\n" +
                         "join user_type ut on ut.id = u.user_type_id\n" +
+                        "join user_contact uc on u.id = uc.user_id \n"+
                         "where u.id = "+id+";";
 
         User user = null;
         try {
-            ResultSet resultSet = connector.runSQLStatement(query);
+            ResultSet resultSet = connector.runSQLResultStatement(query);
             while (resultSet.next()) {
                 user = User.builder()
                         .id(resultSet.getInt("id"))
                         .email(resultSet.getString("email"))
                         .name(resultSet.getString("name"))
                         .type(resultSet.getString("type"))
+                        .address(resultSet.getString("address"))
+                        .phone(resultSet.getString("phone"))
                         .build();
 
             }
@@ -100,15 +111,15 @@ public class UserController {
                         "('%s', '%s', '%s', 3);",email, password, name);
 
         try {
-            connector.runSQLStatement(query);
+            connector.runSQLExecuteStatement(query);
             query = String.format("select id from user where email='%s'", email);
-            ResultSet resultSet = connector.runSQLStatement(query);
+            ResultSet resultSet = connector.runSQLResultStatement(query);
             while (resultSet.next()) {
                 Integer user_id = resultSet.getInt("id");
 
                 query = String.format("INSERT INTO user_contact (phone, address, user_id) VALUES" +
                         "('%s', '%s', %s);", phone, address, user_id);
-                connector.runSQLStatement(query);
+                connector.runSQLExecuteStatement(query);
             }
 
         }catch (Exception exception){
